@@ -1,95 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- aa -->
-<project>
-	<modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>com.watopi</groupId>
-		<artifactId>gwtchosen-project</artifactId>
-		<version>1.1.0</version>
-	</parent>
+    <parent>
+        <groupId>com.github.jdramaix</groupId>
+        <artifactId>gwtchosen-project</artifactId>
+        <version>1.1.0-alpha-2-SNAPSHOT</version>
+    </parent>
 
-	<name>Chosen gQuery plugin example</name>
-	<groupId>com.watopi</groupId>
-	<artifactId>chosen-sample</artifactId>
-	<packaging>war</packaging>
-	<dependencies>
-		<dependency>
-			<groupId>com.watopi</groupId>
-			<artifactId>gwtchosen</artifactId>
-			<version>1.1.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.googlecode.gwtquery</groupId>
-			<artifactId>gwtquery</artifactId>
-			<version>1.2.0</version>
-			<scope>provided</scope>
-		</dependency>
-	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>gwt-maven-plugin</artifactId>
-				<version>${gwtversion}</version>
-				<configuration>
-					<logLevel>${gwt.loglevel}</logLevel>
-					<style>${gwt.outputstyle}</style>
-					<gwtVersion>${gwtversion}</gwtVersion>
-					<soyc>false</soyc>
-					<runTarget>Chosen/ChosenSample.html</runTarget>
-					<hostedWebapp>src/main/webapp</hostedWebapp>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>compile</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-clean-plugin</artifactId>
-				<configuration>
-					<filesets>
-						<fileset>
-							<directory>src/main/webapp/Chosen</directory>
-						</fileset>
-						<fileset>
-							<directory>src/main/webapp/WEB-INF/classes</directory>
-						</fileset>
-						<fileset>
-							<directory>tomcat</directory>
-						</fileset>
-						<fileset>
-							<directory>www-test</directory>
-						</fileset>
-						<fileset>
-							<directory>.gwt-tmp</directory>
-						</fileset>
-					</filesets>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<configuration>
-					<skip>true</skip>
-				</configuration>
-			</plugin>
-		</plugins>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-war-plugin</artifactId>
-					<configuration>
-						<failOnMissingWebXml>false</failOnMissingWebXml>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
+    <name>Chosen gQuery plugin example</name>
+    <artifactId>chosen-sample</artifactId>
+    <packaging>war</packaging>
 
+    <properties>
+        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
+    </properties>
+
+    <build>
+        <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
+
+        <plugins>
+            <!-- JUnit Testing - skip *.GwtTest cases -->
+            <!-- 'mvn test' - runs the Jukito tests -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
+                    <excludes>
+                        <exclude>**/*GwtTest.java</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>gwt-maven-plugin</artifactId>
+                <version>${gwt.version}</version>
+                <configuration>
+                    <strict>true</strict>
+                    <mode>htmlunit</mode>
+                    <testTimeOut>180</testTimeOut>
+                    <!-- With multiple tests use GwtTestSuite.java for speed -->
+                    <!-- <includes>**/*GwtTestSuite.java</includes> -->
+                    <includes>**/*GwtTest.java</includes>
+
+                    <extraJvmArgs>-Xss1024k -Xmx1024m -XX:MaxPermSize=256m</extraJvmArgs>
+                    <logLevel>${gwt.loglevel}</logLevel>
+                    <style>${gwt.outputstyle}</style>
+
+                    <copyWebapp>true</copyWebapp>
+                    <hostedWebapp>${webappDirectory}</hostedWebapp>
+
+                    <runTarget>ChosenSample.html</runTarget>
+                    <module>com.watopi.chosen.sample.ChosenSample</module>
+                    <module>com.watopi.chosen.widgetsample.WidgetSample</module>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test</goal>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>gwtchosen</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.googlecode.gwtquery</groupId>
+            <artifactId>gwtquery</artifactId>
+            <version>${gwtquery.version}</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 </project>
